Fixing backgrounds, grid and general styles: 1. Overlaped backgrounds correctly. 2.fixing some layout's mesuares. 3.fixing some general styles like box-sizing and root font-size.

--- a/style.css
+++ b/style.css
@@ -1,79 +1,272 @@
 :root{
-  font-size: calc(1vw + 0.6em);
   height: auto;
+  font-family: "ARS Maquette", "Helvetica Neue", Arial, sans-serif;
 }
 
+/* GENERALES */
 *{
-  border: 1px solid red !important;
+  box-sizing: border-box;
+  /* border: 1px solid red !important; */
 }
 
 a{
   text-decoration: none;
   color: inherit;
+  margin: 0 !important;
 }
 
-h1{
+.block-anchor{
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.flex{
+  display: flex;
+  align-items: center;
+}
+
+.thumbnail-wrapper{
+  margin: 0 auto;
+  max-width: 1194px;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 294px);
+  grid-gap: 0em;
+  justify-content: center;
+}
+
+.thumbnail{
+  height: 12rem;
+  max-width: 270px;
+}
+
+.title{
   margin: 0 auto;
   max-width: 1188px;
-  padding: 0 20px;
+  /* padding: 0 20px; */
+  font-size: 28px;
+  line-height: 32px;
+  color: #f42;
+  font-weight: 700;
+}
+/*====================
+          HEADER
+ ======================*/
+
+/* NAV1 */
+
+.right{
+  margin-right: 20px;
+}
+
+.nav1 {
+  display: flex;
+  justify-content: space-between;
+  height: 32px;
+  background: #131313;
+  color: hsla(0,0%,100%,.6);
+  font-size: 13px;
+}
+
+.nav1 ul li{
+  margin-left: 17px;
+}
+
+.nav1 ul li a:hover{
+  color: white;
+}
+
+/* NAV2 */
+
+.logo{
+  background: transparent url("https://cdn2.tnwcdn.com/wp-content/themes/cyberdelia/assets/icons/apple-touch-icon-144x144.png");
+  background-size: cover;
+  background-position: 0% 60%;
 }
 
 .logo, .hamburger{
   display: none;
 }
-.nav1 {
-  display: flex;
-  justify-content: space-between;
-  height: 32px;
-}
+
 
 .nav2{
   display: flex;
   justify-content: space-between;
-  height: 49px
+  height: 49px;
+  font-family: Shentox, sans-serif;
+  font-size: 14px;
+  color: rgb(170, 170, 170);
+  text-transform: uppercase;
 }
 
+.nav2 ul li{
+  padding: 0 13px;
+}
+
+.nav2 .nav2-icons {
+  border-left: 1px solid rgb(170, 170, 170);
+  width: 25px;
+}
+
+/* SEPARATOR */
 .separator{
-  background: yellow;
+  background: rgb(255, 221, 51);
   width: 100%;
   height: 30px;
+  font-size: 12px;
+  line-height: 30px;
+  padding-left: 15px;
 }
+
+/* HERO */
 .hero{
-  height: 75vh;
-  max-height: 560px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   grid-gap: 0.5em;
+  padding: 3px 10px;
+  height: 449px;
+  max-width: 1349px;
+  margin-bottom: 120px;
 }
 
 .hero .thumbnail-hero{
   grid-area: 1/1/3/3;
 }
 
-.flex{
-  display: flex;
+.cover-logo{
+  background: transparent url("https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/img/tnw.svg");
+  background-repeat: no-repeat;
+  width: 50%;
+  height: 20%;
+  top: 15px;
+  left: 30px;
+  color: #fff;
+  position: absolute;
+  z-index: 5;
 }
 
-.thumbnail-wrapper{
+.gradient{
+  background-image: url(https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/img/cover-gradient.png);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-position: 0 0;
+  background-size: cover;
+  bottom: 0px;
+  left: 0px;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  z-index: 2;
+}
+
+
+
+ .hero-gradient{
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2017/04/instagram-logo-796x398.png");
+  background-position: 50%;
+  z-index: 0;
+}
+
+ .hero-gradient2{
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/10/McLaren-OP-796x418.jpg");
+  background-position: 50%;
+  z-index: 0;
+}
+
+ .hero-gradient3{
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/10/Wendys-RPG-796x417.jpg");
+  background-position: 50%;
+  z-index: 0;
+}
+
+.black-gradient{
+  background: transparent url("https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/img/image-gradient.png");
+  position: absolute;
+  background-size: 100% 100%;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 3;
+}
+
+.cover-title{
+  color: #fff;
+  font-size: 56px;
+  line-height: 1;
+  position: absolute;
+  z-index: 5;
+  top: 48%;
+  font-family: Avalon,sans-serif;
+  font-weight: 700;
+  padding: 8px;
+}
+
+.cover-title2{
+  color: #fff;
+  font-size: 28px;
+  line-height: 1;
+  position: absolute;
+  z-index: 5;
+  top: 50%;
+  font-family: Avalon,sans-serif;
+  font-weight: 700;
+  padding: 8px;
+}
+
+.cover-links{
+  position: absolute;
+  z-index: 5;
+  bottom: 10px;
+  padding: 8px;
+
+}
+.cover-links li{
+  display: inline-block;
+  color: hsla(0,0%,100%,.6);;
+}
+
+.type{
+  position: absolute;
+  z-index: 5;
+  top: 42%;
+  color: #fff;
+  padding: 8px;
+}
+
+
+.funding{
+  display: flex;
+  justify-content: space-between;
   margin: 0 auto;
   max-width: 1192px;
   padding: 0 20px;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 11rem);
-  grid-gap: 1em;
-  justify-content: center;
 }
 
-.thumbnail{
-  height: 12rem;
-}
-
-.title{
+.funding h1{
   font-size: 28px;
   line-height: 32px;
   color: #f42;
   font-weight: 700;
+}
+
+h1>a{
+  margin-left: 15px;
+}
+
+.funding ul li{
+  display: inline-block;
 }
 
 @media (max-width: 1024px) {
@@ -126,7 +319,6 @@ h1{
   .hero{
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, 318.4px);
-    margin-bottom: 450px;
   }
   .hero .thumbnail-hero{
     grid-area: 1/1/1/1;
